--- a/src/about.css
+++ b/src/about.css
@@ -1,6 +1,6 @@
 .container-home {
   width: 100%;
-  height: 100vh;
+  height: 200vh;
 
   background: #000000;
   --gap: 5em;
@@ -83,5 +83,9 @@
 @media (max-width:720px) {
   .footer .row-f a i {
     margin: 0% 3%;
+  }
+  .youTube iframe{
+    height: 315px;
+    width:560px;
   }
 }
