video link corrected

--- a/src/about.css
+++ b/src/about.css
@@ -1,6 +1,6 @@
 .container-home {
   width: 100%;
-  height: 200vh;
+  height: 100%;
 
   background: #000000;
   --gap: 5em;
@@ -85,7 +85,7 @@
     margin: 0% 3%;
   }
   .youTube iframe{
-    height: 315px;
+    height: 210px;
     width:560px;
   }
 }
