minor update: Event and Form

--- a/src/event.css
+++ b/src/event.css
@@ -14,8 +14,6 @@
     width: 190px;
     height: 254px;
     background-color: #000;
-    /* background-image: url('assets\Saturn.png');
-    background-size: contain; */
     display: flex;
     flex-direction: column;
     justify-content: end;
@@ -27,9 +25,8 @@
   }
 
   .special-card {
-    background-image: url('assets\Saturn.jpg');
+    background-image: url('./assets/Saturn.jpg');
     background-size: contain;
-    /* opacity: 0.5; */
 }
   
   .card::before {
