--- a/src/home.css
+++ b/src/home.css
@@ -1,5 +1,5 @@
 #home{
-    background-image: url('assets\banner.png');
+    background-image: url('assets/banner.png');
     height: 110vh;
     background-size: cover;
     background-repeat: no-repeat;
